# obs-backgroundremoval

./: .clang-format  .gersemirc  .gitignore  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  README.md  REUSE.toml  buildspec.json  demo.gif.license
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  pull_request_template.md.license
.github/actions/build-plugin/: action.yaml
.github/actions/check-changes/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/actions/setup-ccache/: SHA256SUMS-4.12.3.txt  action.yaml  action.yml  generate-checksums.sh
.github/actions/setup-macos-codesigning/: action.yaml
.github/instructions/: gh-aw-no-review-lockfiles.instructions.md  github-actions.instructions.md  license-header-c-cpp.instructions.md
.github/scripts/: .Aptfile  .Brewfile  Build-Windows.ps1  build-macos  build-ubuntu  package-macos  package-ubuntu
.github/scripts/utils.pwsh/: Ensure-Location.ps1  Invoke-External.ps1  Logger.ps1
.github/scripts/utils.zsh/: check_macos  check_ubuntu  log_debug  log_error  log_group  log_info  log_output  log_status  log_warning  mkcd  setup_ubuntu
.github/workflows/: build-ort.yaml  build-project.yaml  check-format.yaml  dependencies-vcpkg.lock.yml  dispatch.yaml  ort.yml  pages.yaml  pages.yml  plugin-build-macos.yml  plugin-build-ubuntu.yml  plugin-build-windows.yml  plugin.yml  pr-pull.yaml  pr-validation.lock.yml  pr-validation.md  push.yaml  reuse.yml
build-aux/: .run-format.zsh
build-aux/.functions/: log_debug  log_error  log_group  log_info  log_output  log_status  log_warning  set_loglevel
cmake/: DownloadOnnxruntime.cmake
cmake/common/: OnnxRuntimeHelper.cmake  bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  helpers_common.cmake  osconfig.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/macos/resources/: ccache-launcher-c.in  ccache-launcher-cxx.in  create-package.cmake.in
cmake/windows/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake
data/: manifest.json
data/effects/: blend_images.effect  kawase_blur.effect  mask_alpha_filter.effect  plate_blur.effect
data/locale/: ar-EG.ini  bn-IN.ini  en-US.ini  es-SP.ini  fr-FR.ini  hi-IN.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  pt-BR.ini  ru-RU.ini  ta-IN.ini  tr-TR.ini  zh-CN.ini
data/models/: SINet_Softmax_simple.with_runtime_opt.ort  mediapipe.with_runtime_opt.ort  rvm_mobilenetv3_fp32.with_runtime_opt.ort.license  selfie_segmentation.with_runtime_opt.ort  selfie_segmentation.with_runtime_opt.ort.license  semantic_guided_llie_180x324.with_runtime_opt.ort  semantic_guided_llie_180x324.with_runtime_opt.ort.license  tbefn_fp32.with_runtime_opt.ort  tcmonodepth_tcsmallnet_192x320.with_runtime_opt.ort  tcmonodepth_tcsmallnet_192x320.with_runtime_opt.ort.license  uretinex_net_180x320.with_runtime_opt.ort  uretinex_net_180x320.with_runtime_opt.ort.license  yolo-v9-t-384-license-plate-end2end.onnx.license
docs/: BUG-REPORTING.md  BUILDING-CUDA-LINUX.md  BUILDING-FEDORA.md  BUILDING-OPENSUSE.md
models/: SINet_Softmax_simple.onnx.license  pphumanseg_fp32.onnx.license  tbefn_fp32.onnx.license
pages/: REUSE.toml  package-lock.json  package.json
pages/src/assets/: addBackgroundRemoval.png.license
pages/src/components/: Chat.svelte  DefineFileVerifierDropArea.astro  DefineLocalDate.astro  FileVerifierDropArea.ts  FileVerifierResultDialog.ts  LocalDate.ts
pages/src/layouts/: Layout.astro  MarkdownLayout.astro
pages/src/lib/: info.ts  llm.ts
pages/src/pages/: 404.astro  arch.md  flatpak.astro  index.astro  interactive-help.astro  macos.astro  ubuntu.astro  uninstall.md  usage.astro  windows.astro
pages/src/pages/dev/: index.astro  macos.md  ubuntu.md  windows.md
pages/src/pages/metadata/: latest-version.txt.ts
pages/src/pages/versions/: [version].astro  index.astro
pages/src/styles/: global.css
scripts/: build_ort_macos.sh  build_ort_ubuntu.sh  build_ort_windows.ps1  fetch_model.ps1  fetch_model.sh  merge_vcpkg_installed_into_macos_universal.sh  package-plugin-windows.ps1
src/: DelayLoad.cpp  FilterData.hpp  background-filter-info.c  background-filter.cpp  background-filter.h  consts.h  enhance-filter-info.c  enhance-filter.cpp  enhance-filter.h  plate-blur-consts.h  plate-blur-filter-info.c  plate-blur-filter.cpp  plate-blur-filter.h  plugin-main.c  plugin-support.c.in  plugin-support.h
src/models/: Model.hpp  ModelMediapipe.hpp  ModelPPHumanSeg.hpp  ModelRVM.hpp  ModelSINET.hpp  ModelSelfie.hpp  ModelSelfieMulticlass.hpp  ModelTBEFN.hpp  ModelTCMonoDepth.hpp  ModelURetinex.hpp
src/obs-utils/: obs-config-utils.cpp  obs-config-utils.hpp  obs-utils.cpp  obs-utils.hpp
src/ort-utils/: ORTModelData.hpp  ort-session-utils.cpp  ort-session-utils.hpp
src/update-checker/: Client.hpp  github-utils.cpp  github-utils.hpp  update-checker.cpp  update-checker.h
src/update-checker/CurlClient/: CMakeLists.txt  CurlClient.cpp
src/yolo/: PlateDetector.cpp  PlateDetector.hpp
