# SPDX-FileCopyrightText: 2026 Kaito Udagawa <umireon@kaito.tokyo>
# SPDX-FileCopyrightText: 2026 Felipe Reyes
#
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.28)

# Read buildspec.json for project metadata
block(
  PROPAGATE PLUGIN_NAME PLUGIN_VERSION PLUGIN_AUTHOR PLUGIN_EMAIL PREBUILT_VERSION QT6_VERSION MACOS_BUNDLEID
)
  file(READ "${CMAKE_CURRENT_SOURCE_DIR}/buildspec.json" BUILDSPEC_CONTENT)
  string(JSON PLUGIN_NAME GET "${BUILDSPEC_CONTENT}" name)
  string(JSON PLUGIN_VERSION GET "${BUILDSPEC_CONTENT}" version)
  string(JSON PLUGIN_AUTHOR GET "${BUILDSPEC_CONTENT}" author)
  string(JSON PLUGIN_EMAIL GET "${BUILDSPEC_CONTENT}" email)
  string(JSON PREBUILT_VERSION GET "${BUILDSPEC_CONTENT}" dependencies prebuilt version)
  string(JSON QT6_VERSION GET "${BUILDSPEC_CONTENT}" dependencies qt6 version)
  string(JSON MACOS_BUNDLEID GET "${BUILDSPEC_CONTENT}" platformConfig macos bundleId)
endblock()

if(DEFINED ENV{GITHUB_RUN_ID})
  set(PLUGIN_BUILD_NUMBER "$ENV{GITHUB_RUN_ID}")
else()
  set(PLUGIN_BUILD_NUMBER "1")
endif()

project("${PLUGIN_NAME}" VERSION "${PLUGIN_VERSION}" LANGUAGES C CXX)

set(PLUGIN_VERSION_MAJOR "${CMAKE_PROJECT_VERSION_MAJOR}")

# Build options
set(VCPKG_TARGET_TRIPLET "" CACHE STRING "Vcpkg target triplet to use")

# Basic configuration
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED TRUE)
set(CMAKE_C_EXTENSIONS FALSE)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_EXTENSIONS FALSE)
set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)

if(MSVC)
  add_compile_definitions(NOMINMAX WIN32_LEAN_AND_MEAN)
elseif(APPLE)
  add_compile_options(-fno-omit-frame-pointer -fstack-protector-strong)
  add_link_options("-Wl,-no_warn_duplicate_libraries")
else()
  add_compile_options(-fno-omit-frame-pointer -fstack-protector-strong)
endif()

# CPack configuration
set(CPACK_ARCHIVE_THREADS 0)
set(CPACK_DEBIAN_COMPRESSION_LEVEL 19)
set(CPACK_DEBIAN_COMPRESSION_TYPE zstd)
set(CPACK_DEBIAN_DEBUGINFO_PACKAGE TRUE)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS TRUE)
set(CPACK_GENERATOR "DEB")
set(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/release")
set(CPACK_PACKAGE_CONTACT "${PLUGIN_AUTHOR} <${PLUGIN_EMAIL}>")
set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CMAKE_PROJECT_VERSION}-${CMAKE_C_LIBRARY_ARCHITECTURE}")
set(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
set(CPACK_PACKAGE_VERSION "${CMAKE_PROJECT_VERSION}")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSES/GPL-3.0-or-later.txt")
set(CPACK_SET_DESTDIR TRUE)
set(CPACK_VERBATIM_VARIABLES TRUE)
set(
  CPACK_SOURCE_IGNORE_FILES
  ".deps_vendor/"
  ".git/"
  "build_x86_64/"
  "build_x64/"
  "build_macos/"
  "release/"
  "vcpkg_installed/"
)

# Include CPack after setting variables
include(CPack)

# Include paths
list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/common")
if(MSVC)
  list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/windows")
  list(
    PREPEND
    CMAKE_PREFIX_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/.deps"
    "${CMAKE_CURRENT_SOURCE_DIR}/.deps/obs-deps-qt6-${QT6_VERSION}-x64"
    "${CMAKE_CURRENT_SOURCE_DIR}/.deps/obs-deps-${PREBUILT_VERSION}-x64"
  )
elseif(APPLE)
  list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/macos")
  list(
    PREPEND
    CMAKE_PREFIX_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/.deps/Frameworks"
    "${CMAKE_CURRENT_SOURCE_DIR}/.deps"
    "${CMAKE_CURRENT_SOURCE_DIR}/.deps/obs-deps-qt6-${QT6_VERSION}-universal"
    "${CMAKE_CURRENT_SOURCE_DIR}/.deps/obs-deps-${PREBUILT_VERSION}-universal"
  )
else()
  list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/linux")
endif()

if(VCPKG_TARGET_TRIPLET STREQUAL "")
  message(STATUS "Build without vcpkg")
else()
  message(STATUS "Build with vcpkg with target triplet: ${VCPKG_TARGET_TRIPLET}")
  list(PREPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.deps_vendor/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
endif()

# Common initialization
include(bootstrap)
include(compilerconfig)
include(defaults)
include(helpers)

# Dependent packages

## PkgConfig
find_package(PkgConfig QUIET)

## OBS and Qt
find_package(libobs REQUIRED)
find_package(obs-frontend-api REQUIRED)

## CURL
find_package(CURL CONFIG QUIET)

if(NOT CURL_FOUND AND PkgConfig_FOUND)
  pkg_check_modules(PC_CURL libcurl IMPORTED_TARGET)
  if(PC_CURL_FOUND)
    add_library(CURL::libcurl ALIAS PkgConfig::PC_CURL)
    set(CURL_FOUND TRUE)
  endif()
endif()

if(NOT CURL_FOUND)
  message(FATAL_ERROR "CURL not found via CMake or pkg-config.")
endif()

## OpenCV
find_package(OpenCV CONFIG QUIET)

if(NOT OpenCV_FOUND AND PkgConfig_FOUND)
  pkg_check_modules(PC_OPENCV opencv4 IMPORTED_TARGET)
  if(PC_OPENCV_FOUND)
    add_library(OpenCV::opencv_core ALIAS PkgConfig::PC_OPENCV)
    add_library(OpenCV::opencv_imgproc ALIAS PkgConfig::PC_OPENCV)
    set(OpenCV_FOUND TRUE)
  endif()
endif()

if(NOT OpenCV_FOUND)
  message(FATAL_ERROR "OpenCV not found via CMake or pkg-config.")
endif()

if(NOT TARGET OpenCV::opencv_core)
  add_library(OpenCV::opencv_core ALIAS opencv_core)
endif()
if(NOT TARGET OpenCV::opencv_imgproc)
  add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
endif()

## ONNX Runtime - use the Microsoft prebuilt binary distribution.
include(OnnxRuntimeHelper)
obs_plate_blur_setup_onnxruntime()

# Plugin build definitions
add_library(${CMAKE_PROJECT_NAME} MODULE)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::libobs)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::obs-frontend-api)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE onnxruntime::onnxruntime)
add_subdirectory(src/update-checker/CurlClient)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE CurlClient OpenCV::opencv_core OpenCV::opencv_imgproc)

target_sources(
  ${CMAKE_PROJECT_NAME}
  PRIVATE
    src/plugin-main.c
    src/ort-utils/ort-session-utils.cpp
    src/obs-utils/obs-utils.cpp
    src/obs-utils/obs-config-utils.cpp
    src/update-checker/github-utils.cpp
    src/update-checker/update-checker.cpp
    src/yolo/PlateDetector.cpp
    src/plate-blur-filter-info.c
    src/plate-blur-filter.cpp
)
target_compile_options(
  ${CMAKE_PROJECT_NAME}
  PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-error=unused-command-line-argument>
)

# Tell the plate-blur filter source which execution providers are available
# at compile time so the UI and session-creation code gate themselves accordingly.
if(HAVE_ONNXRUNTIME_COREML_EP)
  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_ONNXRUNTIME_COREML_EP=1)
endif()
if(HAVE_ONNXRUNTIME_DML_EP)
  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_ONNXRUNTIME_DML_EP=1)
endif()
if(HAVE_ONNXRUNTIME_CUDA_EP)
  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_ONNXRUNTIME_CUDA_EP=1)
endif()

if(APPLE)
  target_link_options(
    ${CMAKE_PROJECT_NAME}
    PRIVATE "-Wl,-exported_symbols_list,${CMAKE_CURRENT_SOURCE_DIR}/src/exported_symbols_macos.txt"
  )

  # Bundle every libonnxruntime*.dylib into <plugin>.plugin/Contents/Frameworks
  # and let the loader resolve @rpath/... from @loader_path/../Frameworks.
  foreach(_ort_runtime_file IN LISTS ONNXRUNTIME_RUNTIME_LIBS)
    target_sources(${CMAKE_PROJECT_NAME} PRIVATE "${_ort_runtime_file}")
    set_property(SOURCE "${_ort_runtime_file}" PROPERTY MACOSX_PACKAGE_LOCATION "Frameworks")
    source_group("Frameworks" FILES "${_ort_runtime_file}")
  endforeach()
  set_property(TARGET ${CMAKE_PROJECT_NAME} APPEND PROPERTY INSTALL_RPATH "@loader_path/../Frameworks")
elseif(MSVC)
  target_sources(${CMAKE_PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/exported_symbols_windows.def")

  # Stage onnxruntime.dll (+ friends) into the build output directory and
  # install them next to the plugin .dll.
  foreach(_ort_runtime_file IN LISTS ONNXRUNTIME_RUNTIME_LIBS)
    add_custom_command(
      TARGET ${CMAKE_PROJECT_NAME}
      POST_BUILD
      COMMAND "${CMAKE_COMMAND}" -E copy_if_different "${_ort_runtime_file}" "$<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>"
      VERBATIM
    )
  endforeach()
  install(FILES ${ONNXRUNTIME_RUNTIME_LIBS} DESTINATION "obs-plugins/64bit")
else()
  target_link_options(
    ${CMAKE_PROJECT_NAME}
    PRIVATE "-Wl,--version-script,${CMAKE_CURRENT_SOURCE_DIR}/src/exported_symbols_linux.map" "-Wl,-Bsymbolic"
  )

  set_property(TARGET ${CMAKE_PROJECT_NAME} APPEND PROPERTY INSTALL_RPATH "$ORIGIN")
  install(
    FILES ${ONNXRUNTIME_RUNTIME_LIBS}
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/obs-plugins"
  )
endif()

set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PLUGIN_NAME})
